[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napalm"
version = "5.1.1"
description = "Network Automation and Programmability Abstraction Layer with Multivendor support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "David Barroso", email = "dbarrosop@dravetech.com" },
    { name = "Mircea Ulinic", email = "ping@mirceaulinic.net" },
    { name = "Brandon Ewing", email = "brandon.ewing@warningg.com" },
    { name = "Kirk Byers", email = "ktbyers@twb-tech.com" },
]
classifiers = [
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "paramiko>=3.5.0",
    "requests>=2.7.0",
    "textfsm>=1.1.3",
    "jinja2>=3.1.4",
    "netaddr>=1.3.0",
    "pyyaml>=6.0.2",
    "pyeapi>=1.0.2",
    "netmiko>=4.4.0",
    "junos-eznc>=2.7.4",
    "lxml>=4.3.0",
    "ncclient>=0.6.16",
    "ttp>=0.9.5",
    "ttp_templates>=0.3.7",
    "netutils>=1.0.0",
    "typing-extensions>=4.12.2",
]

[project.urls]
Homepage = "https://github.com/napalm-automation/napalm"
Repository = "https://github.com/napalm-automation/napalm"

[project.scripts]
cl_napalm_configure = "napalm.base.clitools.cl_napalm_configure:main"
cl_napalm_test = "napalm.base.clitools.cl_napalm_test:main"
cl_napalm_validate = "napalm.base.clitools.cl_napalm_validate:main"
napalm = "napalm.base.clitools.cl_napalm:main"

[dependency-groups]
dev = [
    "ruff==0.15.5",
    "coveralls==4.1.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-json-report==1.5.0",
    "mypy==1.19.1",
    "ddt==1.7.2",
    "types-PyYAML==6.0.12.20250915",
    "types-requests== 2.32.4.20260107",
]
docs = [
    "urllib3==2.6.3",
    "sphinx==7.4.7",
    "sphinx-rtd-theme==2.0.0",
    "invoke==2.2.1",
    "jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "pytest==9.0.2",
    "ansible==11.13.0; python_version >= '3.11'",
]

[tool.uv]
managed = true
package = true

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".tox",
    ".env",
    ".venv",
    "dist",
    "build",
    "south_migrations",
    "migrations",
    "napalm/base/test",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]

[tool.coverage.run]
source = ["napalm"]

[tool.coverage.report]
omit = [
    "napalm/base/test/*",
    "napalm/base/clitools/*",
]

[tool.ruff]
line-length = 100 

# Specify your floor Python version (i.e. minimum version Netmiko supports) 
target-version = "py310"

# Files or directories to exclude from linting and formatting
exclude = [ 
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable these rule sets for a modern, clean codebase
# E/W = pycodestyle, F = Pyflakes, I = isort, UP = pyupgrade, B = bugbear
# select = ["E", "F", "W", "I", "UP", "B"]

# If you want to be extra strict about line length in the linter:
# extend-select = ["E501"] 

[tool.ruff.format]
# Matches Black's style but honors the 100 char limit
quote-style = "double"
indent-style = "space"

# Optional: Formats code snippets inside docstrings!
docstring-code-format = true
docstring-code-line-length = 80

# FIX(temporary): Ignore everything in the current directory and subdirectories
exclude = ["."]
