[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    .venv
    dist
    build
    south_migraitons
    migrations
    napalm/base/test
python_files =
    test_*.py
    *_test.py
    tests.py

[coverage:run]
include =
    napalm/*

[coverage:report]
omit =
    napalm/base/test/*
    napalm/base/clitools/*
